# Brazo-Robotico-

./: .gitignore  LLM_KINECT_BRAZO_JETSON_SPEC.md  PROMPT_PARA_CLAUDE_CODE_JETSON.txt  README-Validacion pruebas llm sin brazo  README_LLM_KINECT_BRAZO.md  experimental_metrics.csv  ieee_paper_corrections.txt  red_calib.txt  samples.txt  ultimo_robotica.ino
.claude/: settings.local.json
Brazo_Robotico_Real /: Readme.md
Brazo_Robotico_Real /Codigo_Esp32/: Codigo_esp32.ino
Brazo_Robotico_Real /brazo4_ws/: setup_workspace.sh
Brazo_Robotico_Real /brazo4_ws/src/Brazo4/: CMakeLists.txt  analisis_cinematico.py  informe_persona3.md  informe_persona3.tex
Brazo_Robotico_Real /brazo4_ws/src/Brazo4/launch/: control.launch.py  display.launch  display.launch.py  esp32_rviz.launch.py  gazebo.launch  visualizar_comandos.launch.py
Brazo_Robotico_Real /brazo4_ws/src/Brazo4/meshes/: L2.STL  L4.STL  base_link.STL  left_finger.STL  right_flange_link.STL  right_gear.STL  right_link.STL
Brazo_Robotico_Real /brazo4_ws/src/Brazo4/scripts/: 1_julio.ino  control_brazo.py  esp32_to_rviz.py  esp32_to_urdf_bridge.py  imprimir_angulos.py  imprimir_comandos.py  mover_coordenadas.py  teleop_brazo.py  teleop_cartesiano.py  visor_kinect.py
Brazo_Robotico_Real /brazo4_ws/src/Brazo4/urdf/: Brazo4.csv  Brazo4.urdf  brazo4central.csv  brazo4central.urdf  urdf gripper.SLDASM.csv  urdf gripper.SLDASM.urdf  urdf sin gripper.csv  urdf sin gripper.urdf  urdf y gripper 2.urdf
Brazo_Robotico_Real /first_ws/src/Exa_Prac/: package.xml  setup.cfg  setup.py
Brazo_Robotico_Real /first_ws/src/Exa_Prac/Exa_Prac/: robot_mode_server.py
URDF_Riz/Brazo4/: CMakeLists.txt  package.xml
URDF_Riz/Brazo4/config/: brazo4.rviz  kinect_view.rviz
URDF_Riz/Brazo4/launch/: control.launch.py  display.launch  gazebo.launch
URDF_Riz/Brazo4/meshes/: 1.STL  2.STL  3.STL  4.STL  BL.STL  L1.STL  L3.STL  left_flange_link.STL  left_gear.STL  left_link.STL  right_finger.STL
URDF_Riz/Brazo4/scripts/: control_brazo.py  mapeador_360.py  mapear_espacio.py  mover_coordenadas.py  teleop_brazo.py  teleop_cartesiano.py  visualizador_camara.py
URDF_Riz/Brazo4/urdf/: Brazo4.csv  Brazo4.urdf  brazo4central.csv  brazo4central.urdf  urdf gripper.SLDASM.csv  urdf gripper.SLDASM.urdf  urdf sin gripper.csv  urdf sin gripper.urdf  urdf y gripper 2.urdf
brazo4_ws/brazo4_ws/src/: brazo4
src/brazo_ai/: package.xml  setup.cfg  setup.py
src/brazo_ai/brazo_ai/: calibrate_kabsch.py  camera_to_base_node.py  experimental_logger_node.py  llm_agent_node.py  manual_plan_node.py  plan_utils.py  red_to_base_printer.py  safety_guard_node.py  scene_state_node.py  tag_calibrator.py  task_executor_node.py
src/brazo_ai/launch/: llm_kinect_brazo.launch.py  visual_sync.launch.py
src/brazo_interfaces/: CMakeLists.txt  package.xml
src/brazo_interfaces/action/: MoveToPoint.action  PickObject.action
src/brazo_interfaces/msg/: ArmCommandStatus.msg  Object3D.msg  Object3DArray.msg  TaskPlan.msg
src/kinect2_bridge/: CMakeLists.txt
src/kinect2_bridge_backup_optimized/: package.xml
src/kinect2_bridge_backup_optimized/docs/: TESTING.md
src/kinect2_bridge_backup_optimized/launch/: kinect2_bridge.launch.py
src/kinect2_bridge_backup_optimized/src/: kinect2_bridge_node.cpp  kinect2_bridge_node.cpp.bak_phase2
src/object_3d_detector/: package.xml  setup.cfg  setup.py
src/object_3d_detector/object_3d_detector/: yolo_depth_to_point.py
src/teleop_brazo/: package.xml  setup.cfg  setup.py
src/teleop_brazo/resource/: teleop_brazo
src/teleop_brazo/teleop_brazo/: __init__.py  teleop_node.py
