<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2_bridge</name>
  <version>0.2.0</version>
  <description>
    ROS 2 Humble bridge for Kinect v2 via libfreenect2.
    Publishes color (BGR8 1920x1080), depth (32FC1 metres 512x424), and IR (16UC1 512x424)
    with correct camera_info on all streams. OpenGL pipeline default for Jetson.
  </description>
  <maintainer email="melizafx@gmail.com">franco</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
